--- a/webapp/WEB-INF/config/data/jdbc.properties
+++ b/webapp/WEB-INF/config/data/jdbc.properties
@@ -1,7 +1,7 @@
 # all parameters required to connect to database MySQL 5.5.
 
 jdbc.driverClassName=pdo_pgsql
-jdbc.url=jdbc:ec2-107-21-229-87.compute-1.amazonaws.com/d53mb6snla7e41
+jdbc.url=jdbc:postgres://gbijfcfvuxpsbz:WlsieOtZe3JOcYl7j3vZELQ5wv@ec2-54-163-240-97.compute-1.amazonaws.com:5432/dbntoudt1cs0n8
 jdbc.username=clcpsetuobsocl
 jdbc.password=xldR5OWgYA11HHnawadd8EiQBk
 
