--- a/webapp/WEB-INF/config/data/jdbc.properties
+++ b/webapp/WEB-INF/config/data/jdbc.properties
@@ -10,7 +10,7 @@ dbcp.maxIdle=30
 dbcp.maxWait=20000
 
 hibernate.generate_statistics=false
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hb2ddl=true
 hibernate.format_sql=true
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
