--- a/webapp/WEB-INF/config/data/jdbc.properties
+++ b/webapp/WEB-INF/config/data/jdbc.properties
@@ -1,9 +1,9 @@
 # all parameters required to connect to database MySQL 5.5.
 
 jdbc.driverClassName=pdo_pgsql
-jdbc.url=jdbc:postgres://clcpsetuobsocl:xldR5OWgYA11HHnawadd8EiQBk@ec2-107-21-229-87.compute-1.amazonaws.com:5432/d53mb6snla7e41
-jdbc.username=clcpsetuobsocl
-jdbc.password=xldR5OWgYA11HHnawadd8EiQBk
+jdbc.url=jdbc:postgres://gbijfcfvuxpsbz:WlsieOtZe3JOcYl7j3vZELQ5wv@ec2-54-163-240-97.compute-1.amazonaws.com:5432/dbntoudt1cs0n8
+jdbc.username=gbijfcfvuxpsbz
+jdbc.password=WlsieOtZe3JOcYl7j3vZELQ5wv
 
 dbcp.maxActive=100
 dbcp.maxIdle=30
